# insper-sync

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
accounts/: admin.py  models.py  tasks.py  urls.py  views.py
accounts/management/commands/: test_insper_auth.py
accounts/migrations/: 0001_initial.py  0002_user_google_access_token_user_google_calendar_id_and_more.py  0003_rename_insper_password_user_insper_enc_password_and_more.py
core/: celery.py  crawler.py  google_calendar.py  settings.py  tests.py  urls.py  utils.py  views.py
core/insper/: __init__.py  auth.py  calendar.py  crypto.py  exceptions.py  models.py  utils.py
sync/: models.py  tasks.py  urls.py  views.py
sync/migrations/: 0001_initial.py
templates/: base.html  dashboard.html  index.html  terms_of_use.html
templates/accounts/: dashboard.html  setup_credentials.html  verify_token.html
templates/emails/: verify_email.html
templates/sync/: configuration.html  history.html  session_detail.html
