[project]
name = "insper-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=45.0.2",
    "django>=5.2.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ipython>=8.36.0",
]
